# zenit_printer_agent

./: CMakeLists.txt  README.md  default.nix  fetchNixpkgs.nix  package.xml  setup.py
bag/: cube.bag  stans.bag
launch/: zenit.launch
misc/: client.py  server.py
robonomics/: client.py  model.txt
scripts/: print_node  trader_node
src/zenit_printer_agent/: generate_ask_bid.py  nodes.py  octopi.py  printagent.py  printeragent.py  trader.py
srv/: Objective.srv
